--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -11,18 +11,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
     "mbox = mailbox.mbox('mbox_challenge_q1/mbox_example')\n",
-    "output_mbox = mailbox.mbox('output_mbox')\n",
-    "output_mbox.lock()"
+    "output_mbox = mailbox.mbox('output_mbox3')\n",
+    "# output_mbox.lock()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,22 +31,39 @@
     "    text_list = text.split('\\n')\n",
     "    reversed_text_list = text_list[::-1]\n",
     "    \n",
-    "    msg = mailbox.mboxMessage()\n",
-    "    msg.set_unixfrom('author Sat Feb  7 00:00:00 2001')\n",
-    "    msg['From'] = message['From']\n",
-    "    msg['To'] = message['To']\n",
-    "    msg['Subject'] = message['Subject']\n",
-    "    msg.set_payload('\\n'.join(reversed_text_list))\n",
-    "    output_mbox.add(msg)"
+    "    new_msg = message\n",
+    "    new_msg.set_payload('\\n'.join(reversed_text_list))\n",
+    "    output_mbox.add(new_msg)\n",
+    "#     msg = mailbox.mboxMessage()\n",
+    "#     msg.set_unixfrom(message.get_unixfrom())\n",
+    "#     msg['From'] = message['From']\n",
+    "#     msg['Date'] = message['Date']\n",
+    "# #     msg['To'] = message['To']\n",
+    "#     msg['Subject'] = message['Subject']\n",
+    "#     msg.set_payload('\\n'.join(reversed_text_list))\n",
+    "#     output_mbox.add(msg)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 139,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['A (zzz)\\n      U\\n      Thor\\n      <a.u.thor@example.com> (Comment)',\n",
+       " 'Fri, 9 Jun 2006 00:44:16 -0700',\n",
+       " '[PATCH] a commit.']"
+      ]
+     },
+     "execution_count": 139,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "mbox[0].get_unixfrom()"
+    "mbox[0].values()"
    ]
   },
   {
